@@ -127,6 +127,8 @@ Changes in FLTK 1.4.0                            Released: ??? ?? 2021
   Other Improvements
 
   - (add new items here)
+  - Fixed X11 copy-paste and drag-and-drop target selection (issue #182).
+    This fix has been backported to 1.3.6 as well.
   - Added support for macOS 11.0 "Big Sur" and for building for
     the arm64 architecture.
   - Add optional argument to Fl_Printer::begin_job() to receive
